--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.42.6"
+    "svelte": "^3.42.6",
+    "sass": "^1.43.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "date-fns": "^2.25.0"
+  }
 }
