--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.2",
     "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
     "eslint": "^7.32.0",
@@ -17,7 +18,8 @@
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.43.4",
-    "svelte": "^3.42.6"
+    "svelte": "^3.42.6",
+    "svelte-popperjs": "^1.2.8"
   },
   "type": "module",
   "dependencies": {
